force-app/main/default/objects/Property_Inspections__c/Property_Inspections__c.object-meta.xml
<CustomObject>
    <label>Property Inspection</label>
    <nameField>
        <displayFormat>PI-{0000000}</displayFormat>
        <label>Property Inspections ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>