force-app/main/default/objects/Property_Inspections__c/fields/Are_Gutters_and_Downspouts__c.field-meta.xml
<CustomField>
    <fullName>Are_Gutters_and_Downspouts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are Gutters and Downspouts Firmly Attached.</inlineHelpText>
    <label>Are Gutters and Downspouts ?</label>
    <type>Checkbox</type>
</CustomField>