force-app/main/default/objects/Property_Inspections__c/fields/Are_Stair_Railings_Secure__c.field-meta.xml
<CustomField>
    <fullName>Are_Stair_Railings_Secure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Stair Railings Secure?</label>
    <type>Checkbox</type>
</CustomField>