force-app/main/default/objects/Property_Inspections__c/fields/Are_the_Air_Filters_Clean__c.field-meta.xml
<CustomField>
    <fullName>Are_the_Air_Filters_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are the Air Filters Clean?</label>
    <type>Checkbox</type>
</CustomField>