force-app/main/default/objects/Property_Inspections__c/fields/Are_the_Sinks_Tubs_Showers_Draining__c.field-meta.xml
<CustomField>
    <fullName>Are_the_Sinks_Tubs_Showers_Draining__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the sinks,tubs, and showers draining smoothly?</inlineHelpText>
    <label>Are the Sinks,Tubs, Showers Draining?</label>
    <type>Checkbox</type>
</CustomField>