force-app/main/default/objects/Property_Inspections__c/fields/Are_the_Trees_Healthy__c.field-meta.xml
<CustomField>
    <fullName>Are_the_Trees_Healthy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the Trees Healthy? Do any branches hang too close to the roof?</inlineHelpText>
    <label>Are the Trees Healthy?</label>
    <type>Checkbox</type>
</CustomField>