force-app/main/default/objects/Property_Inspections__c/fields/Are_There_any_Signs_of_Leaks__c.field-meta.xml
<CustomField>
    <fullName>Are_There_any_Signs_of_Leaks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are There any Signs of Leaks?</label>
    <type>Checkbox</type>
</CustomField>