force-app/main/default/objects/Property_Inspections__c/fields/Are_There_Signs_of_Moisture_of_Mold__c.field-meta.xml
<CustomField>
    <fullName>Are_There_Signs_of_Moisture_of_Mold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there signs of moisture of mold? Check for musty odors.</inlineHelpText>
    <label>Are There Signs of Moisture of Mold?</label>
    <type>Checkbox</type>
</CustomField>