force-app/main/default/objects/Property_Inspections__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Property Inspections</relationshipLabel>
    <relationshipName>Property_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>