force-app/main/default/objects/Property_Inspections__c/fields/Do_the_Switches_Work__c.field-meta.xml
<CustomField>
    <fullName>Do_the_Switches_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do the Switches Work? Are there any obvious malfunctions?</inlineHelpText>
    <label>Do the Switches Work?</label>
    <type>Checkbox</type>
</CustomField>