force-app/main/default/objects/Property_Inspections__c/fields/Does_Drainage_Appear__c.field-meta.xml
<CustomField>
    <fullName>Does_Drainage_Appear__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does Drainage Appear to be traveling away from the house?</inlineHelpText>
    <label>Does Drainage Appear?</label>
    <type>Checkbox</type>
</CustomField>