force-app/main/default/objects/Property_Inspections__c/fields/Does_the_garage_Door_Operate_Properly__c.field-meta.xml
<CustomField>
    <fullName>Does_the_garage_Door_Operate_Properly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does the garage Door Operate Properly and have safety sensors installed?</inlineHelpText>
    <label>Does the garage Door Operate Properly?</label>
    <type>Checkbox</type>
</CustomField>