force-app/main/default/objects/Property_Inspections__c/fields/Has_the_Sewer_line_been_Scoped_to_Check__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Sewer_line_been_Scoped_to_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the sewer line been scoped to check for potential cracks?</inlineHelpText>
    <label>Has the Sewer line been Scoped to Check</label>
    <type>Checkbox</type>
</CustomField>