force-app/main/default/objects/Property_Inspections__c/fields/How_is_the_Water_Pressure_in_Home__c.field-meta.xml
<CustomField>
    <fullName>How_is_the_Water_Pressure_in_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>How is the Water Pressure in Home Fixtures?</inlineHelpText>
    <label>How is the Water Pressure in Home ?</label>
    <type>Checkbox</type>
</CustomField>