force-app/main/default/objects/Property_Inspections__c/fields/How_Old_is_the_Furnace__c.field-meta.xml
<CustomField>
    <fullName>How_Old_is_the_Furnace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How Old is the Furnace?</label>
    <type>Checkbox</type>
</CustomField>