force-app/main/default/objects/Property_Inspections__c/fields/If_There_is_a_Sump_Pump_is_it_Working__c.field-meta.xml
<CustomField>
    <fullName>If_There_is_a_Sump_Pump_is_it_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If there is a sump pump, is it working properly?</inlineHelpText>
    <label>If There is a Sump Pump, is it Working ?</label>
    <type>Checkbox</type>
</CustomField>