force-app/main/default/objects/Property_Inspections__c/fields/Inspection_End_Dates__c.field-meta.xml
<CustomField>
    <fullName>Inspection_End_Dates__c</fullName>
    <label>Inspection End Date</label>
    <type>Date</type>
</CustomField>