force-app/main/default/objects/Property_Inspections__c/fields/Inspection_Manager__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Manager__c</fullName>
    <formula>User__r.FirstName &amp;&apos;&apos;&amp; User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Manager</label>
    <type>Text</type>
</CustomField>