force-app/main/default/objects/Property_Inspections__c/fields/Inspection_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Start_Date__c</fullName>
    <label>Inspection Start Date</label>
    <type>DateTime</type>
</CustomField>