force-app/main/default/objects/Property_Inspections__c/fields/Inspection_Start_Dates__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Start_Dates__c</fullName>
    <label>Inspection Start Date</label>
    <type>Date</type>
</CustomField>