force-app/main/default/objects/Property_Inspections__c/fields/Is_Asbestos_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_Asbestos_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Asbestos Present?</label>
    <type>Checkbox</type>
</CustomField>