force-app/main/default/objects/Property_Inspections__c/fields/Is_the_Garbage_Disposal_Working_Properly__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Garbage_Disposal_Working_Properly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Garbage Disposal Working Properly?</inlineHelpText>
    <label>Is the Garbage Disposal Working Properly</label>
    <type>Checkbox</type>
</CustomField>