force-app/main/default/objects/Property_Inspections__c/fields/Is_the_panel_Updated_and_Expandable__c.field-meta.xml
<CustomField>
    <fullName>Is_the_panel_Updated_and_Expandable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the panel Updated and Expandable for additional appliances or a potential remodel?</inlineHelpText>
    <label>Is the panel Updated and Expandable?</label>
    <type>Checkbox</type>
</CustomField>