force-app/main/default/objects/Property_Inspections__c/fields/Is_there_Enough_Insulation_and_Adequate__c.field-meta.xml
<CustomField>
    <fullName>Is_there_Enough_Insulation_and_Adequate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there Enough Insulation and Adequate ventilation?</inlineHelpText>
    <label>Is there Enough Insulation and Adequate?</label>
    <type>Checkbox</type>
</CustomField>