force-app/main/default/objects/Property_Inspections__c/fields/What_is_Overall_Condition__c.field-meta.xml
<CustomField>
    <fullName>What_is_Overall_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>What is the Overall Condition? look for missing Shingles or damaged flashing</inlineHelpText>
    <label>What is Overall Condition?</label>
    <type>Checkbox</type>
</CustomField>