force-app/main/default/objects/Property_Inspections__c/fields/What_is_the_Age_and_Condition_of_Stove__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Age_and_Condition_of_Stove__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>What is the age and condition of the stove, dishwasher or refrigirator?</inlineHelpText>
    <label>What is the Age and Condition of Stove?</label>
    <type>Checkbox</type>
</CustomField>