force-app/main/default/objects/Property_Inspections__c/fields/What_is_the_Condition_of_the_Chimney__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Condition_of_the_Chimney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What is the Condition of the Chimney?</label>
    <type>Checkbox</type>
</CustomField>