force-app/main/default/objects/Property_Inspections__c/fields/What_is_the_Condition_of_the_Deck__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Condition_of_the_Deck__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>What is the Condition of the Deck? Check for signs of rotting wood.</inlineHelpText>
    <label>What is the Condition of the Deck?</label>
    <type>Checkbox</type>
</CustomField>