force-app/main/default/objects/Property_Inspections__c/recordTypes/Appliances.recordType-meta.xml
<RecordType>
    <fullName>Appliances</fullName>
    <active>true</active>
    <label>Appliances</label>
</RecordType>