force-app/main/default/objects/Property_Inspections__c/recordTypes/Attic.recordType-meta.xml
<RecordType>
    <fullName>Attic</fullName>
    <active>true</active>
    <label>Attic</label>
</RecordType>