force-app/main/default/objects/Property_Inspections__c/recordTypes/Electrical.recordType-meta.xml
<RecordType>
    <fullName>Electrical</fullName>
    <active>true</active>
    <label>Electrical</label>
</RecordType>