force-app/main/default/objects/Property_Inspections__c/recordTypes/Roof.recordType-meta.xml
<RecordType>
    <fullName>Roof</fullName>
    <active>true</active>
    <label>Roof</label>
</RecordType>