force-app/main/default/objects/Property_Inspections__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Inspection_Status__c</columns>
    <columns>User__c</columns>
    <columns>Inspection_Start_Dates__c</columns>
    <columns>Inspection_End_Dates__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>